# ezprofile

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.vi.md  backfill.js  check-db.js  index.html  package-lock.json  package.json  test-dedupe.js  test-dedupe.ts  test-duplicates.js  test-enc.js  test-prefs.js  vite.config.ts
.github/workflows/: release.yml
electron/: ipc-handlers.ts  main.ts  preload.ts
electron/data/: hardware-presets.ts
electron/database/: schema.ts
electron/services/: backup-manager.ts  browser-version-manager.ts  chrome-cookie-crypto.ts  chrome-launcher.ts  cookie-manager.ts  encryption-service.ts  extension-manager.ts  gdrive-service.ts  profile-manager.ts  proxy-bridge.ts  proxy-checker.ts  s3-service.ts  sync-scheduler.ts
electron/utils/: fingerprint-utils.ts  import-export.ts
scripts/: afterInstall.sh  afterPack.js  afterRemove.sh
src/: App.tsx  api.ts  i18n.ts  main.tsx  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  updater-key  updater-key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  gdrive.rs  lib.rs  main.rs  s3.rs
src/components/: AssignExtensionModal.tsx  BatchAssignGroupModal.tsx  BatchAssignProxyModal.tsx  BrowserVersionModal.tsx  ContextMenu.tsx  CountryFlag.tsx  CreateProfileModal.tsx  EditProfileModal.tsx  ExtensionManagerModal.tsx  FingerprintSettings.tsx  GridLaunchModal.tsx  GroupManagerModal.tsx  Icons.tsx  PassphrasePromptModal.tsx  PasswordModal.tsx  ProxyManagerModal.tsx  SyncProfileModal.tsx  SyncSettingsSection.tsx  (+1 more)
(+12 files in other folders)
